--- a/config/Prod/BaseNetwork.yaml
+++ b/config/Prod/BaseNetwork.yaml
@@ -2,4 +2,9 @@ template_path: vpc.py
 sceptre_user_data:
   resources:
     vpc:
-      cidr: !environment_variable cidr
+      cidr: "10.0.0.0/16"
+      subnets:
+        public:
+          - { name: "PubNet01", az: us-east-1a, cidr: "10.0.0.0/24" }
+          - { name: "PubNet02", az: us-east-1b, cidr: "10.0.1.0/24" }
+          - { name: "PubNet03", az: us-east-1c, cidr: "10.0.2.0/24" }
